# OpenSoft-VibemeterApp

./: .env.example  .gitignore  .pre-commit-config.yaml  .~lock.unique_employees_weighted_emotion.csv#  Dockerfile  Makefile  README.md  Readme.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.watchtower.yml  docker-compose.yml  emotions_weight.ipynb  final_merged_dataset.ipynb  mprocs.local.yaml  mprocs.yaml  package-lock.json  package.json  performance_should_chat.ipynb  preprocess_leave.ipynb  preprocess_onboarding.ipynb  preprocess_rewards.ipynb  preprocess_should_chat_activity.ipynb  preprocess_vibe.ipynb  pyproject.toml  requirements.txt  server.py
.do/: app.yaml
agent_runtime/: Dockerfile  ai.py  app.py  config.py  personas.py  pyproject.toml  requirements.txt  session_store.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
backend/src/: config.py
backend/src/controllers/: admin_controller.py  auth_controller.py  chat_controller.py  internal_controller.py  user_controller.py
backend/src/middlewares/: authmiddleware.py
backend/src/models/: agent_location_events.py  agents.py  chats.py  database.py  employee.py  feedback_ratings.py  redis_client.py
backend/src/routes/: admin_routes.py  auth_routes.py  chat_routes.py  internal_routes.py  user_routes.py
backend/src/services/: admin_services.py  agent_health_service.py  agent_registry_service.py  agent_session_token_service.py  agent_sync_service.py  ai_services.py  auth_service.py  chat_graph.py  chat_service.py  conversation_memory_service.py  prompts.py  redis_stream_service.py  stream_timing_callback.py  test.py  user_service.py
backend/src/utils/: Feedback_Bank.json
backend/tests/: __init__.py  conftest.py  test_admin_routes.py  test_admin_services.py  test_agent_registry_service.py  test_auth_middleware.py  test_auth_routes.py  test_auth_service.py  test_chat_graph.py  test_chat_routes.py  test_chat_service.py  test_config.py  test_conversation_memory_service.py  test_internal_routes.py  test_prompts.py  test_redis_stream_service.py  test_server.py  test_user_routes.py  test_user_service.py
data-process/: .~lock.unique_employees_weighted_emotion.csv#  README.md  final_merged_dataset.ipynb  leave_should_chat.ipynb  onboarding_should_chat.ipynb  performance_should_chat.ipynb  preprocess_leave.ipynb  preprocess_onboarding.ipynb  preprocess_performance.ipynb  preprocess_rewards.ipynb  preprocess_should_chat_activity.ipynb  preprocess_vibe.ipynb  rewards_should_chat.ipynb
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
public/: index.html  (+1 more)
(+229 files in other folders)
