[project]
name = "wellbee-agent-runtime"
version = "1.0.0"
description = "Reusable WellBee multi-agent runtime"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi==0.128.0",
    "google-genai==1.56.0",
    "httpx>=0.28.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.1",
    "PyJWT==2.10.1",
    "redis>=4.6.0",
    "uvicorn[standard]==0.24.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
]

[dependency-groups]
dev = []
